--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,3 +1,15 @@
 model = model
 description = description
 state = state
+order=order
+surname=surname
+name=name
+citizenship=citizenship
+gender=gender
+birthDate=birth date
+birthPlace=birth place
+issuedAgency=issued agency name
+issuedDate=issued date
+validity=validity
+pickupDate=pickup date
+returnDate=return date
