--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -2,14 +2,8 @@ model = model
 description = description
 state = state
 order=order
-surname=surname
+firstName=first name
 name=name
-citizenship=citizenship
-gender=gender
 birthDate=birth date
 birthPlace=birth place
-issuedAgency=issued agency name
-issuedDate=issued date
-validity=validity
-pickupDate=pickup date
-returnDate=return date
+lastName=last name
